[OS/2] Bug 410398: fix autoscroll behavior on trunk, r=wuno